--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -12,6 +12,22 @@
 
 <body>
     <!-- <div class="container"> -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Features</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
     {% block content %}
     {% endblock %}
     <!-- </div> -->
@@ -28,6 +44,7 @@
             $(".likebtn").click(function (event) {
                 event.preventDefault()
                 var ansid = $(this).attr('id');
+                console.log(ansid)
                 $.ajax({
                     url: $(this).data('url'),
                     type: 'POST',
@@ -37,8 +54,8 @@
                         'action': 'post'
                     },
                     success: function (response) {
-                        $('#like_count' + ansid).text(response['result']);
-                        // console.log(response['stated'])
+                        $('#like_count' + ansid).text(response['total_likes']);
+                        console.log(response)
                         if (response['flag']) {
                             $('#' + ansid).addClass('text-danger');
                         } else {
