--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -5,10 +5,10 @@
 
 <div class="container">
     <div class=" row">
+      
         {% for post in posts %}
         <div class="col-md-4 my-5">
-            <div class="h-100 hvr-shrink"
-                style="box-shadow: 0 1px 7px rgba(0, 0, 0, 0.25); overflow: hidden; border-radius: 20px">
+            <div class="h-100 border hvr-shrink">
                 <div class=" text-dark">
                     {% if post.thumbnail %}
                     <img src="{{post.thumbnail.url}}" class="img-fluid product-img" alt="{{post.title}}"
@@ -17,23 +17,24 @@
                     <img src="/media/1.png" alt="no thumbnail"
                         style="height: 220px; width: 100%; object-fit: cover; object-position: center;" />
                     {% endif %}
-                    <div class="p-4">
+                    <div class="p-2">
                         <p><b>By</b>: {{ post.author }} </p>
-
-                        <h2 class="py-2 h3"> {{ post.title|truncatechars:50 }} </h2>
+                        <h2 class="pb-2 h3"> {{ post.title|truncatechars:50 }} </h2>
                         <p>
                             {{ post.content|truncatechars:70 }}
                         </p>
                     </div>
                     
                     
-                    <div>
-                        <button type="button" id="{{ post.pk }}" data-url="" value="{{ post.pk }}" 
-                            class="btn border-0 likebtn">
+                    <div class="bg-light py-2 px-3 ml-2 mb-1" style="display: inline-block; border-radius: 20px;">
+                            <button type="button" id="{{ post.pk }}" data-url="{% url 'blog:post_like' %}"
+                            class="btn border-0 likebtn m-0 p-0">
                             <i id="icons" class="icofont icofont-thumbs-up icofont-2x"></i>
                         </button>
+                        <span id="like_count{{post.pk}}" class="like_count mt-3">{{post.total_likes}}</span>
+                        
                     </div>
-                
+                    
                 </div>
             </div>
         </div>
@@ -43,3 +44,4 @@
 </div>
 
 {% endblock content %}
+
